# ko-chart-vlm

./: .gitignore  README.md  pyproject.toml
data/day1_charts/: qa.json
data/sft/: dataset_info.json
data/synth/: manifest.json  train.json  val.json
docs/: blog.md  vlm-basics.html  vlm-basics.md
experiments/day1_zeroshot/: meta.json  report.md  results.jsonl
experiments/day2_dataset/: report.md
experiments/day3_baseline/: meta.json  metrics.json  report.md  results.jsonl  scored.jsonl
experiments/day4_qlora/: meta.json  qwen3vl_qlora.yaml  report.md  smoke_compare.json  smoke_val.json
experiments/day4_qlora/adapter/: README.md  adapter_config.json  train_results.json  trainer_log.jsonl  trainer_state.json
experiments/day4_qlora/smoke_adapter/: meta.json  metrics.json  results.jsonl  scored.jsonl
experiments/day5_eval/: ablation_1ep.yaml  ablation_compare.json  day1_scored.json  day1_scored_1ep.json  meta.json  report.md  val_compare.json
experiments/day5_eval/adapter_1ep/: README.md  adapter_config.json  train_results.json  trainer_log.jsonl  trainer_state.json
experiments/day5_eval/day1_adapter/: meta.json  results.jsonl
experiments/day5_eval/day1_adapter_1ep/: meta.json  results.jsonl
experiments/day5_eval/val_adapter/: meta.json  metrics.json  results.jsonl  scored.jsonl
experiments/day5_eval/val_adapter_1ep/: meta.json  metrics.json  (+2 more)
experiments/day6_serving/: demo_examples.txt  export.yaml  meta.json  quantize_awq.py  report.md
scripts/: eval.py  make_chart_dataset.py  make_day1_charts.py  run_zeroshot.py  serve_demo.py  to_sharegpt.py
